Fix: Trading Chart tools button is cropped

--- a/src/containers/TradingChart/TradingChart.pcss
+++ b/src/containers/TradingChart/TradingChart.pcss
@@ -4,7 +4,7 @@
 
 .pg-trading-chart {
   background: transparent;
-  height: 94%;
+  height: 90.1%;
   left: 0;
   position: relative;
   top: 0;
